--- a/deploy_docker.yml
+++ b/deploy_docker.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: provision rke2
-  hosts: master_nodes, worker_nodes
+- name: Deploy Docker on target hosts
+  hosts: docker_hosts
   gather_facts: true
 
   vars_files:
     - "vars/main.yml"
 
   roles:
-    - rke2
+    - docker
