Minor fix to host inv
Signed-off-by: Shivank Chaudhary <81817735+Alt-Shivam@users.noreply.github.com>

--- a/deploy_docker.yml
+++ b/deploy_docker.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Deploy Docker on target hosts
-  hosts: docker_hosts
+  hosts: master_nodes, worker_nodes
   gather_facts: true
 
   vars_files:
