--- a/roles/docker/tasks/install.yml
+++ b/roles/docker/tasks/install.yml
@@ -8,7 +8,7 @@
     value: '2097152'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['docker_hosts']
+  when: inventory_hostname in groups['master_nodes', 'worker_nodes']
   become: true
 
 - name: Set fs.inotify.max_user_watches to 524288
@@ -17,7 +17,7 @@
     value: '524288'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['docker_hosts']
+  when: inventory_hostname in groups['master_nodes', 'worker_nodes']
   become: true
 
 - name: Set fs.inotify.max_user_instances to 512
@@ -26,7 +26,7 @@
     value: '512'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['docker_hosts']
+  when: inventory_hostname in groups['master_nodes', 'worker_nodes']
   become: true
 
 # Install Docker
