Freeze docker version
Signed-off-by: Shivank Chaudhary <81817735+Alt-Shivam@users.noreply.github.com>

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,6 @@
 docker:
-  version: "20.10.22"
+  engine:
+    version: "5:20.10.22~3-0~ubuntu-jammy"
   config:
     daemon:
       storage_driver: "overlay2"
